# enscons

examples/pyext/: README.rst  SConstruct  pyproject.toml
examples/pyext/.github/workflows/: build.yml
examples/pyext/src/: spam_system.c
